[package]
name = "sysy-cargo-template"
version = "0.1.0"
edition = "2021"

[dependencies]
koopa = "0.0.7"
lalrpop-util = { version = "0.20.2", features = ["lexer"] }

# Add a build-time dependency on the lalrpop library:
[build-dependencies]
lalrpop = "0.20.2"
# If you are supplying your own external lexer you can disable default features so that the
# built-in lexer feature is not included
# lalrpop = { version = "0.20.2", default-features = false }